feat: implement sca storage